--- a/wp-content/themes/hawkdtheme/hawkd.css
+++ b/wp-content/themes/hawkdtheme/hawkd.css
@@ -1,6 +1,6 @@
 article {
 	padding: 30px 0;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .article-body {
@@ -19,4 +19,8 @@ ul#menu-main-nav li {
 
 article#post-5 {
 	background: rgb(252, 219, 65);
+}
+
+.img-box img {
+	max-width: 100%;
 }
