faq-länkar, fixed nav

--- a/wp-content/themes/hawkdtheme/hawkd.css
+++ b/wp-content/themes/hawkdtheme/hawkd.css
@@ -1,11 +1,29 @@
 body {
 	font-family: 'Roboto', sans-serif;
+	overflow-y: scroll;
 }
 
-article {
+body.home article {
 	padding: 30px 0;
 	min-height: 100vh;
 }
+
+#header {
+	position: fixed;
+	top: 0;
+	padding-top: 10px;
+	width: 100vw;
+	height: 90px;
+	background: rgba(255, 255, 255, 0.8);
+	z-index: 10;
+}
+
+#container {
+	position: relative;
+	top: 90px;
+}
+
+
 
 .article-body {
 	width: 60%;
@@ -32,4 +50,14 @@ article#post-7 {
 
 .img-box img {
 	max-width: 100%;
+}
+
+/*********** FAQ *********************************/
+ul.faq-nav {
+	padding: 1rem;
+}
+
+/*********** RANDOM ******************************/
+.hidden {
+	display: hidden;
 }
