--- a/wp-content/themes/hawkdtheme/hawkd.css
+++ b/wp-content/themes/hawkdtheme/hawkd.css
@@ -18,7 +18,7 @@ body {
 
 body.home article {
 	padding: 30px 0;
-	min-height: 100vh;
+	min-height: 90vh;
 }
 
 a, a:visited {
@@ -36,11 +36,13 @@ h1,h2,h3,h4,h5,h6 {
 #header {
 	position: fixed;
 	top: 0;
+	left: 15px;
 	padding-top: 10px;
-	width: 100vw;
-	background: rgba(255, 255, 255, 0.8);
+	width: 100%;
+	background: rgba(255, 255, 255, 1);
 	z-index: 10;
 	overflow: auto;
+	border-bottom: 1px solid #58595b;
 }
 
 #container {
@@ -77,7 +79,7 @@ article#post-7 {
 
 /*********** FAQ *********************************/
 ul.faq-nav {
-
+	
 }
 .faq-nav li {
 	margin-bottom: 1em;
@@ -88,7 +90,9 @@ ul.faq-nav {
 	font-size: 1.3em;
 }
 
-body.page-template-faq-page article {
+.panel-title {
+	color: #58595b;
+	font-size: 1.3em;
 }
 
 .faq-arrow {
