ska testa kontaktformulär

--- a/wp-content/themes/hawkdtheme/hawkd.css
+++ b/wp-content/themes/hawkdtheme/hawkd.css
@@ -285,6 +285,10 @@ ul.faq-nav {
 	font-size: 0.6em;
 }
 
+.panel-heading {
+	cursor: pointer;
+}
+
 /*********** RANDOM ******************************/
 .hidden {
 	display: hidden;
